--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Gestao de Despesas Pessoais V2
+
+# ===== CONFIGURACOES H2 ======
+spring.datasource.url=jdbc:h2:file:./data/gestao-despesa
+spring.datasource.driveClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
