ddl-auto e driverClassName
Typo no application.properties (isso impede o Hibernate de criar a tabela):

Está spring.jpa.hibernate.dll-auto=update (errado) → o correto é spring.jpa.hibernate.ddl-auto=update.

Está spring.datasource.driveClassName=org.h2.Driver (errado) → o correto é spring.datasource.driverClassName=org.h2.Driver.

 Changes to be committed:
	modified:   src/main/resources/application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Gestao de Despesas Pessoais V2
 
 # ===== CONFIGURACOES H2 ======
 spring.datasource.url=jdbc:h2:file:./data/gestao-despesa
-spring.datasource.driveClassName=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.dll-auto=update
+spring.jpa.hibernate.ddl-auto=update
